# pkg/library/handler/create_book.go
@@ -13,10 +13,12 @@ import (
 // @Summary		Create Book
 // @Description	Creates the book in database and uploads the file into bucket
 // @Tags			Books
-// @Router			/books [post]
 // @Param			data	body		handler.BookRequestDoc	true	"Required book information"
 // @Param			book	formData	file					true	"Book File"
-// @Success		200
+// @Router			/books [post]
+// @Accept multipart/form-data
+// @Produce json
+// @Success		200 {object} handler.BookResponseDoc
 func (h *handler) CreateBook(w http.ResponseWriter, r *http.Request) {
 	if err := r.ParseMultipartForm(maxMemory); err != nil {
 		customErr.Error(
